fixed overlap of buttons on iphone 5

--- a/css/style.css
+++ b/css/style.css
@@ -539,7 +539,7 @@ a:before, a:after  {
   }
 
   #top-menu li a {
-     margin: 12px 10px 20px 10px;
+     margin: 12px 10px 0px 10px;
      font-size: 0.75em;
      padding: 0 !important;
      padding-left: 2px !important;
